# db-backup-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
.pi/: architecture.md  context.md  session-policy.md
.pi/done/: 01-project-bootstrap.md  02-config-and-scheduler.md  03-docker-discovery-and-metadata-resolution.md  04-database-backup-providers.md  05-local-staging-and-manifest.md  06-rsync-sync-and-retention.md  07-health-logging-and-run-summary.md  08-containerization-and-example-deployment.md  09-architect-context-and-roadmap.md  10-github-actions-ci-release.md  11-ci-nightly-ghcr.md  11-local-mounted-storage-provider.md  12-storage-backend-selection-and-staging-cleanup.md  13-architecture-local-storage-update.md  15-live-local-storage-validation-and-runtime-fix.md  16-cleanup-temporary-staging-after-successful-publish.md  17-default-database-port-fallbacks.md  18-console-error-reporting-for-export-and-upload-failures.md  24-ftp-ftps-storage-provider.md  (+8 more)
docs/: README.md  configuration.md  deployment.md  discovery-and-labels.md  getting-started.md  operations.md  troubleshooting.md
tests/: test_bootstrap.py  test_config_and_scheduler.py  test_database_backup_providers.py  test_docker_discovery_and_metadata_resolution.py  test_ftp_ftps_storage_provider.py  test_health_and_orchestrator.py  test_local_mounted_storage_provider.py  test_local_staging_and_manifest.py  test_rsync_sync_and_retention.py  test_storage_backend_selection.py
(+95 files in other folders)
