[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-agent"
version = "0.1.0"
description = "Modular backup agent for PostgreSQL and MariaDB containers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Backup Agent Contributors" }]
dependencies = []

[project.scripts]
backup-agent = "backup_agent.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

